--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: 'Courier New', Courier, monospace;
 }
@@ -10,6 +15,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+  text-align: center;
 }
 
 /* do not edit this footer */
@@ -24,3 +31,20 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+
+.parent{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 52px;
+  /* flex-wrap: wrap; */
+}
+
+ .parent div{
+  max-width: 200px;
+  text-align: center;
+ }
+
+
+
