--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .modal {
@@ -67,3 +68,23 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* solution */
+
+.modal{
+  display: flex;
+  padding: 18px;
+  
+}
+
+.outer-2{
+  display: flex;
+  flex-direction: column;
+  margin-left: 12px;
+  gap: 12px;
+  }
+
+.header{
+  font-weight: bold;
+  font-size: 18px;
+}  
