--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+*{
+  margin: 0;
+  padding: 0;
+  /* outline: 1px solid black; */
+}
+
 body {
   height: 100vh;
   margin: 0;
@@ -16,6 +22,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -23,4 +30,45 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+  margin-bottom: 10px;
+}
+
+/* solution */
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+a{
+  color: #c78a61;
+  text-decoration: none;
+}
+
+ul{
+display: flex;
+list-style-type: none;
+gap: 14px;
+}
+
+.header{
+display: flex;
+justify-content: space-between;
+padding: 15px;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  background-color: #eee;
 }
