--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,7 +1,13 @@
+*{
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  
 }
 
 .header {
@@ -24,6 +30,68 @@ body {
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0,0,0,.17);
   border-radius: 4px;
+  
+}
+
+
+/* solution */
+
+.container{
+  display: flex;
+  flex-direction: column;
+}
+
+
+.header{
+  font-size: 32px;
+  font-weight: 900;
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
+  
+}
+
+
+.main{
+  display: flex;
+  flex: 1;
+}
+
+.sidebar{
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+.sidebar ul, li, a{
+  text-decoration: none;
+  list-style: none;
+  font-size: 24px;
+  color: white;
+  padding: 0;
+  margin: 0;
+  line-height: 50px;
+  text-align: start;
+}
+
+.section{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  padding: 48px;
+}
+
+.card{
+  width: 350px;
+  height: 230px;
+  padding: 10px;
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
